--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,22 +1,15 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:800|Gentium+Basic:400,400italic);
 
-.strike { text-decoration: line-through; }
-
-.avatar img { width: 30px; height: 30px; -webkit-border-radius: 15px; -moz-border-radius: 15px; border-radius: 15px; }
-.caption { margin: 0 0 60px 20px; }
-.caption a { font: 14px/16px 'Unica One', Helvetica, Arial, sans-serif; letter-spacing: .1em; color: #999; text-transform: uppercase; text-decoration: none; }
-.caption a:hover { background-color: #ddd; }
-
 .container { width: 960px; margin: 0 auto; }
 
-.section-rivers {background: url(../images/indigo-sea.jpg) no-repeat center; background-size: cover; padding: 40px 20px 80px 20px; }
-.section-rivers .container { width: 100%; min-height: 400px; -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility; }
-.section-rivers h2 {font: 32px/42px 'Open Sans', sans-serif; font-weight: 800; color: #29232D;text-align: left; letter-spacing: 1px;padding: 20px 20px 0 20px;}
-.section-rivers p {font: 18px/27px 'Gentium Basic', serif;color: #666666; text-align: left;padding: 20px 20px 0 20px; max-width: 500px;}
-.section-rivers .caption { margin-bottom:5px; text-align: left; color: #666666; }
-.section-rivers .caption a {color: #666666;}
-.section-rivers .avatar { margin-left: 20px; }
+.section-intro {background: url(../images/indigo-sea.jpg) no-repeat center; background-size: cover; padding: 40px 20px 80px 20px; }
+.section-intro .container { width: 100%; min-height: 400px; -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility; }
+.section-intro h2 {font: 32px/42px 'Open Sans', sans-serif; font-weight: 800; color: #29232D;text-align: left; letter-spacing: 1px;padding: 20px 20px 0 20px;}
+.section-intro p {font: 18px/27px 'Gentium Basic', serif;color: #0000FF; text-align: left;padding: 20px 20px 0 20px; max-width: 500px;}
+.section-intro .caption { margin-bottom:5px; text-align: left; color: #0000FF; }
+.section-intro .caption a {color: #0000FF;}
+.section-intro .avatar { margin-left: 20px; }
 
 body {
   padding:50px;
@@ -27,7 +20,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family:Open+Sans,Helvetica;
-  color:#666666;
+  color:#0000FF;
   margin:0 0 20px;
 }
 
