--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,13 +3,21 @@
 
 .container { width: 960px; margin: 0 auto; }
 
-.section-intro {background: url(../images/indigo-sea.jpg) no-repeat center; background-size: cover; padding: 40px 20px 80px 20px; }
+.section-intro {background-color: #FFFFFF; no-repeat center; background-size: cover; padding: 40px 20px 80px 20px; }
 .section-intro .container { width: 100%; min-height: 400px; -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility; }
 .section-intro h2 {font: 32px/42px 'Open Sans', sans-serif; font-weight: 800; color: #29232D;text-align: left; letter-spacing: 1px;padding: 20px 20px 0 20px;}
 .section-intro p {font: 18px/27px 'Gentium Basic', serif;color: #0000FF; text-align: left;padding: 20px 20px 0 20px; max-width: 500px;}
 .section-intro .caption { margin-bottom:5px; text-align: left; color: #0000FF; }
 .section-intro .caption a {color: #0000FF;}
 .section-intro .avatar { margin-left: 20px; }
+
+.section-one {background: url(../images/indigo-sea.jpg) no-repeat center; background-size: cover; padding: 40px 20px 80px 20px; }
+.section-one .container { width: 100%; min-height: 400px; -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility; }
+.section-one h2 {font: 32px/42px 'Open Sans', sans-serif; font-weight: 800; color: #29232D;text-align: left; letter-spacing: 1px;padding: 20px 20px 0 20px;}
+.section-one p {font: 18px/27px 'Gentium Basic', serif;color: #0000FF; text-align: left;padding: 20px 20px 0 20px; max-width: 500px;}
+.section-one .caption { margin-bottom:5px; text-align: left; color: #0000FF; }
+.section-one .caption a {color: #0000FF;}
+.section-one .avatar { margin-left: 20px; }
 
 body {
   padding:50px;
