--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ h1, h2, p { margin: 0; padding: 0; }
 .section-intro .caption a {color: #666666;}
 .section-intro .avatar { margin-left: 20px; }
 
-.section-one {background: url(../images/ventures.png) no-repeat center; background-size: cover; padding: 40px 20px 80px 20px; }
+.section-one {background: url(../images/ventures.png) no-repeat center; padding: 150px 0 60px; overflow: hidden; color: #fff; }
 .section-one .container { width: 100%; min-height: 400px; -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility; }
 .section-one h2 {font: 32px/42px 'Open Sans', sans-serif; font-weight: 800; color: #29232D;text-align: left; letter-spacing: 1px;padding: 20px 20px 0 20px;}
 .section-one p {font: 18px/27px 'Gentium Basic', serif;color: #666666; text-align: left;padding: 20px 20px 0 20px; max-width: 500px;}
