--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ Main components
   color: white;
 }
 .cd-fixed-bg.cd-bg-1 {
-  background-image: url("../img/cd-background-1.jpg");
+  background-image: url("../img/cd-background-1.png");
 }
 .cd-fixed-bg.cd-bg-2 {
   background-image: url("../img/cd-background-2.jpg");
