--- a/css/styles.css
+++ b/css/styles.css
@@ -15,14 +15,14 @@
 }
 
 .hello h1{
-    color: #fff;
+    color: #ccc;
     font-size: 48px;
     font-weight: bold;
     font-family: 'Shift', sans-serif;
 }
 
 .hello p{
-    color: #fff;
+    color: #ccc;
     font-size:20px;
 }
 
