line height on dtbr.

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@
 
 .dtbr h1{
     color: #000000;
+    line-height: 38px;
     font-size: 48px;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
