--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
     padding: 20px 20px 0 20px;
+    line-height: 38px;
 }
 
 .hello p{
@@ -55,7 +56,7 @@
 
 .livework {
     height: 800px;
-    background-image: url('');
+    background-color: #EAEAEA;
     padding: 40px 20px 80px 20px;
 }
 
@@ -73,7 +74,15 @@
     font-size:20px;
     font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
-    max-width: 500px
+    max-width: 500px;
+}
+
+.livework ul{
+    color:#ccc;
+    font-size:18px;
+    font-family: 'Gentium Basic';
+    padding: 40px 20px 0 20px;
+    max-width: 500px;
 }
 
 .eise {
@@ -153,7 +162,7 @@
 
 .speaking {
     height: 800px;
-    background-image: url('');
+    background-color: blue;
     padding: 40px 20px 80px 20px;
 }
 
@@ -175,7 +184,7 @@
 
 .teaching {
     height: 800px;
-    background-image: url('');
+    background-color: white;
     padding: 40px 20px 80px 20px;
 }
 
@@ -197,7 +206,7 @@
 
 .press {
     height: 800px;
-    background-image: url('');
+    background-color: black;
     padding: 40px 20px 80px 20px;
 }
 
