Adjustments for EISE

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,16 @@
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
     padding: 20px 20px 0 20px;
+    line-height: 20px
+}
+
+.eise h2{
+    color: #000000;
+    font-size: 24px;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    padding: 20px 20px 0 20px;
+    line-height: 18px
 }
 
 .eise p{
