correction on link.

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@
 
 .livework {
     height: 800px;
-    background: url(img/livework.jpg) 
+    background: url(../img/livework.jpg) 
     no-repeat left; 
     background-size: cover;
     padding: 40px 20px 80px 20px;
