--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,10 @@
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
     padding: 20px 20px 0 20px;
+    line-height: 36px;
+    font-style: underline;
+    font-variant: italic;
+
 }
 
 .servir-bem p{
