--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+body { margin: 0; padding: 0; zoom: 1; }
+
 .nav a {
     color: #5a5a5a;
     font-size: 11px;
@@ -11,7 +13,7 @@
 
 .container {
     width:960px;
-    margin:0 auto;
+    margin:0 left;
 }
 
 .hello {
