--- a/css/styles.css
+++ b/css/styles.css
@@ -109,8 +109,9 @@ body { margin: 0; padding: 0; zoom: 1; }
     font-size: 48px;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
-    padding: 20px 20px 0 0px;
-    line-height: 20px
+    padding: 20px 20px 0 20px;
+    line-height: 20px;
+    margin:0;
 }
 
 .eise h2{
