--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ body { margin: 0; padding: 0; zoom: 1; }
     font-family: 'Open Sans', sans-serif;
     padding: 20px 20px 0 20px;
     line-height: 20px;
-    margin:0;
+    margin-bottom:0;
 }
 
 .eise h2{
