--- a/css/styles.css
+++ b/css/styles.css
@@ -260,12 +260,15 @@ body { margin: 0; padding: 0; zoom: 1; }
     height:300px;
     background-color: #f7f7f7;
     padding: 40px 20px 80px 20px;
-    -webkit-column-count: 3; /* Chrome, Safari, Opera */
-    -moz-column-count: 3; /* Firefox */
-    column-count: 3;
-    -webkit-column-gap: 40px; /* Chrome, Safari, Opera */
-    -moz-column-gap: 40px; /* Firefox */
-    column-gap: 40px;
+
+}
+
+.footer .colophon {
+    width: 300px; 
+    display: inline-block; 
+    vertical-align: top; 
+    text-align: left; 
+    margin: 0 7px 30px 10px; 
 }
 
 .footer h3{
