--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 
 .eise {
     height: 800px;
-    background-image: url('');
+    background-image: url(../img/eise.jpg) no-repeat left;
     padding: 40px 20px 80px 20px;
 }
 
