--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,8 @@ body { margin: 0; padding: 0; zoom: 1; }
 
 .speaking {
     height: 800px;
-    background-color: blue;
+    background: url(../img/speaking.jpg) no-repeat left; 
+    background-attachment: fixed;
     padding: 40px 20px 80px 20px;
 }
 
