--- a/css/styles.css
+++ b/css/styles.css
@@ -191,13 +191,13 @@ body { margin: 0; padding: 0; zoom: 1; }
 .speaking {
     height: 800px;
     background-color: black;
-    background: url(../img/speaking.jpg) no-repeat left; 
+    background: url(../img/speaking.jpg) no-repeat top left; 
     background-attachment: fixed;
     padding: 40px 20px 80px 20px;
 }
 
 .speaking h1{
-    color: #000000;
+    color: #FFFFFF;
     font-size: 48px;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
@@ -209,7 +209,7 @@ body { margin: 0; padding: 0; zoom: 1; }
     font-size:20px;
     font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
-    max-width: 500px
+    max-width: 400px
 }
 
 .teaching {
