Changes to EISE background.

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .eise h1{
-    color: #000000;
+    color: #333333;
     font-size: 48px;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
@@ -116,7 +116,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .eise h2{
-    color: #000000;
+    color: #666666;
     font-size: 24px;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
@@ -125,7 +125,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .eise p{
-    color: #ccc;
+    color: #E6E6E6;
     font-size:20px;
     font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
