--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .ventures p{
-    color: #ccc;
+    color: #808080;
     font-size:20px;
     font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
@@ -83,7 +83,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .livework p{
-    color: #ccc;
+    color: #808080;
     font-size:20px;
     font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
@@ -181,7 +181,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .servir-bem p{
-    color: #ccc;
+    color: #808080;
     font-size:20px;
     font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
@@ -274,11 +274,16 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .footer h3{
-    font-family: 'Shift', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     font-weight: bold;
 }
 
 .footer a{
     color: #00b0ff;
+}
+
+.footer p{
+    color: #808080;
+    font-family: 'Gentium+Book', serif;
 }
