--- a/css/styles.css
+++ b/css/styles.css
@@ -244,15 +244,15 @@ body { margin: 0; padding: 0; zoom: 1; }
     color: #ccc;
     font-size: 24px;
     font-weight: bold;
-    font-family: 'Open+Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     padding: 20px 20px 0 20px;
 
 }
 
 .press p{
-    color: #ccc;
+    color: #FFFFFF;
     font-size:20px;
-    font-family: 'Gentium+Book';
+    font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
     max-width: 500px
 
@@ -279,11 +279,11 @@ body { margin: 0; padding: 0; zoom: 1; }
     font-weight: bold;
 }
 
-.footer a{
-    color: #00b0ff;
-}
-
 .footer p{
     color: #808080;
-    font-family: 'Gentium+Book', serif;
+    font-family: 'Gentium Basic', serif;
+}
+
+.footer a{
+    color: #00b0ff;
 }
