--- a/css/styles.css
+++ b/css/styles.css
@@ -255,6 +255,14 @@ body { margin: 0; padding: 0; zoom: 1; }
     font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
     max-width: 500px
+}
+
+.press ul{
+    color: #FFFFFF;
+    font-size:20px;
+    font-family: 'Gentium Basic';
+    padding: 20px 20px 0 20px;
+    max-width: 500px
 
 }
 
