--- a/css/styles.css
+++ b/css/styles.css
@@ -91,10 +91,10 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .livework ul{
-    color:#ccc;
+    color:#808080;
     font-size:18px;
     font-family: 'Gentium Basic';
-    padding: 40px 20px 0 20px;
+    padding: 40px 20px 0 30px;
     max-width: 500px;
 }
 
