--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 
 .hello {
     min-height: 400px;
-    background: url(../img/livework.jpg) no-repeat left; 
+    background: url(../img/home.jpg) no-repeat left; 
     background-attachment: fixed;
     padding: 40px 20px 80px 20px;
 }
