Correction on Nav Bar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,13 @@ body { margin: 0; padding: 0; zoom: 1; }
     padding-left: 10px;
     padding-right:10px;
     text-transform: uppercase;
+    width: 100px; 
+    display: inline-block; 
+    vertical-align: top; 
+    text-align: left; 
+    margin: 0 7px 30px 10px;
+    list-style-type: none;
+
 }
 
 .container {
