--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,12 @@ body { margin: 0; padding: 0; zoom: 1; }
     text-align: left; 
     margin: 0 7px 30px 10px;
     list-style-type: none;
+}
 
+.nav {
+    background-color:#FFFFFF;
+    opacity: 0.6;
+    filter : alpha(opacity=60);
 }
 
 .container {
@@ -274,14 +279,14 @@ body { margin: 0; padding: 0; zoom: 1; }
 
 }
 
-.footer {
+.contact {
     height:300px;
     background-color: #f7f7f7;
     padding: 40px 20px 80px 20px;
 
 }
 
-.footer .colophon {
+.contact .colophon {
     width: 300px; 
     display: inline-block; 
     vertical-align: top; 
@@ -289,17 +294,17 @@ body { margin: 0; padding: 0; zoom: 1; }
     margin: 0 7px 30px 10px; 
 }
 
-.footer h3{
+.contact h3{
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     font-weight: bold;
 }
 
-.footer p{
+.contact p{
     color: #808080;
     font-family: 'Gentium Basic', serif;
 }
 
-.footer a{
+.contact a{
     color: #00b0ff;
 }
