--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .teaching p{
-    color: #ccc;
+    color: #808080;
     font-size:20px;
     font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
@@ -267,13 +267,13 @@ body { margin: 0; padding: 0; zoom: 1; }
     color: #FFFFFF;
     font-size:20px;
     font-family: 'Gentium Basic';
-    padding: 20px 20px 0 20px;
+    padding: 20px 40px 0 20px;
     max-width: 500px
-
+    list-style: none;
 }
 
 .contact {
-    height:300px;
+    height:200px;
     background-color: #f7f7f7;
     padding: 40px 20px 80px 20px;
 
