--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@ body { margin: 0; padding: 0; zoom: 1; }
 
 .nav a {
     color: #5a5a5a;
+    background-color:rgba(255,0,0,0.6);
+    font-family: 'Open Sans', sans-serif;
     font-size: 11px;
     font-weight: bold;
     padding-top: 14px;
