--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 .dtbr {
     height: 800px;
-    background-color: #F9C232;
+    background: url(../img/dtbr.jpg) no-repeat left; 
     padding: 40px 20px 80px 20px;
 }
 
