--- a/css/styles.css
+++ b/css/styles.css
@@ -166,13 +166,14 @@ body { margin: 0; padding: 0; zoom: 1; }
     color: #FFFFFF;
     font-size:20px;
     font-family: 'Gentium Basic';
-    max-width:500px;
+    max-width:400px;
     padding:20px 20px 0 20px;
 }
 
 .servir-bem {
     height: 800px;
-    background-image: url('');
+    background: url(../img/servir-bem.jpg) no-repeat left; 
+    background-attachment: fixed;
     padding: 40px 20px 80px 20px;
 }
 
