Changed hello font to white.

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .hello h1{
-    color: #000000;
+    color: #FFFFFF;
     font-size: 48px;
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
