--- a/css/styles.css
+++ b/css/styles.css
@@ -189,7 +189,7 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 
 .servir-bem p{
-    color: #808080;
+    color: #F2F2F2;
     font-size:20px;
     font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
