--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,21 @@ body { margin: 0; padding: 0; zoom: 1; }
     max-width: 400px
 }
 
+.speaking h3{
+    color: #FFFFFF;
+    font-size: 36px;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    padding: 20px 20px 0 20px;
+}
+
+.speaking p{
+    color: #ccc;
+    font-size:20px;
+    font-family: 'Gentium Basic';
+    padding: 20px 20px 0 20px;
+    max-width: 400px
+
 .teaching {
     height: 800px;
     background-color: white;
