--- a/css/styles.css
+++ b/css/styles.css
@@ -234,6 +234,7 @@ body { margin: 0; padding: 0; zoom: 1; }
     font-family: 'Gentium Basic';
     padding: 20px 20px 0 20px;
     max-width: 400px
+}
 
 .teaching {
     height: 800px;
