--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body { margin: 0; padding: 0; zoom: 1; }
     background: url(../img/home.jpg) no-repeat left; 
     background-attachment: fixed;
     padding: 40px 20px 80px 20px;
+    background-color: #415062;
 }
 
 .hello h1{
@@ -76,7 +77,8 @@ body { margin: 0; padding: 0; zoom: 1; }
     height: 800px;
     background: url(../img/livework.jpg) no-repeat left; 
     background-attachment: fixed;
-    /*background-size: cover;*/
+    background-color: #F2F2F2;
+    background-size: cover;
     padding: 40px 20px 80px 20px;
 }
 
