Still trying mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -326,6 +326,46 @@ body { margin: 0; padding: 0; zoom: 1; }
     color: #00b0ff;
 }
 
+@media all and (min-width: 768px) {
+    .hello { background-color: #171e26 url(../img/hello_small.png) no-repeat right bottom; }
+    .hello .container { width: 340px; }
+    .ventures .container { width: 340px; }
+    .livework .container { width: 340px; }
+    .eise .container { width: 340px; }
+    .dtbr .container { width: 340px; }
+    .servir-bem .container { width: 340px; }
+    .speaking .container { width: 340px; }
+    .teaching .container { width: 340px; }
+    .press .container { width: 340px; }
+    .contact .container { width: 340px; }
+    .hello p { max-width: 460px; width: auto; padding: 0 20px; }
+    .ventures p { max-width: 460px; width: auto; padding: 0 20px; }
+    .livework p { max-width: 460px; width: auto; padding: 0 20px; }
+    .eise p { max-width: 460px; width: auto; padding: 0 20px; }
+    .dtbr p { max-width: 460px; width: auto; padding: 0 20px; }
+    .servir-bem p { max-width: 460px; width: auto; padding: 0 20px; }
+    .speaking p { max-width: 460px; width: auto; padding: 0 20px; }
+    .teaching p { max-width: 460px; width: auto; padding: 0 20px; }
+    .press p { max-width: 460px; width: auto; padding: 0 20px; }
+    .contact p { max-width: 460px; width: auto; padding: 0 20px; }
+    .hello h1 { max-width: 460px; width: auto; padding: 0 20px; }
+    .ventures h1 { max-width: 460px; width: auto; padding: 0 20px; }
+    .livework h1 { max-width: 460px; width: auto; padding: 0 20px; }
+    .eise h1 { max-width: 460px; width: auto; padding: 0 20px; }
+    .dtbr h1 { max-width: 460px; width: auto; padding: 0 20px; }
+    .servir-bem h1 { max-width: 460px; width: auto; padding: 0 20px; }
+    .speaking h1 { max-width: 460px; width: auto; padding: 0 20px; }
+    .teaching h1 { max-width: 460px; width: auto; padding: 0 20px; }
+    .press h1 { max-width: 460px; width: auto; padding: 0 20px; }
+    .contact h1 { max-width: 460px; width: auto; padding: 0 20px; }
+    .ventures img { max-width: 460px; width: auto; padding: 0 20px; }
+    .livework img { max-width: 460px; width: auto; padding: 0 20px; }
+    .teaching img { max-width: 460px; width: auto; padding: 0 20px; }
+     
+
+    /* .hello .container .moral { margin-bottom: 80px; } */
+
+
 /*
 @media only screen and ( min-width: 33.75em ) {
     .hello { font-size: 100%; }
@@ -370,18 +410,5 @@ body { margin: 0; padding: 0; zoom: 1; }
 }
 */
 
-@media all and (min-width: 768px) {
-    .hello { background-color: #171e26 url(../img/hello_small.png) no-repeat right bottom; }
-    .hello .container { width: 340px; }
-    .ventures .container { width: 340px; }
-    .livework .container { width: 340px; }
-    .eise .container { width: 340px; }
-    .dtbr .container { width: 340px; }
-    .servir-bem .container { width: 340px; }
-    .speaking .container { width: 340px; }
-    .teaching .container { width: 340px; }
-    .press .container { width: 340px; }
-    .contact .container { width: 340px; }
-    /* .hello .container .moral { margin-bottom: 80px; } */
 
 
